# encpkt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
getopt/: CMakeLists.txt
md5/: CMakeLists.txt
sample/: CMakeLists.txt  encpkt.h  testenc.c  testpkt.c  testsha.c
sample/ssl/: encpkt_s.c
sample/tiny/: CMakeLists.txt  encpkt.c
